--- a/less/chat.less
+++ b/less/chat.less
@@ -227,9 +227,6 @@
 			padding: 11px 0 0 0;
 			label { line-height: 1.2; float: none; display: block; }
 			.social.btn-group { float: none; clear: both; }
-			.register-npr {
-				position: absolute; top: -4px; right: 20px;
-			}
 		}
 		.chat-editor {
 			label { float: none; line-height: 1.2; }
